сверстал блоки header и features

--- a/index.html
+++ b/index.html
@@ -9,6 +9,61 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <section class="header__menu-con">
+                <a href="#" class="header__logo"><img src="/img/logo.png" alt=""></a>
+                <nav class="header__menu">
+                    <a href="#">Features</a>
+                    <a href="#">Works</a>
+                    <a href="#">Our Team</a>
+                    <a href="#">Testimonials</a>
+                    <a href="#">Download</a>
+                </nav>
+            </section>
+            <section class="header__intro">
+                <h1 class="header__title">Your Favorite One Page Multi Purpose Template</h1>
+                <h2 class="header__slogan">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna
+                    vel scelerisque nisl consectetur et.</h2>
+                <button class="btn  btn--red">Find Out More</button>                
+            </section>
+        </div>
+    </header>
+    <section class="features">
+        <div class="container">
+            <div class="features__inner">
+                <div class="features__item">
+                    <img src="img/features/1.png" alt="" class="features__icon">
+                    <h3 class="features__title">Easily Customised</h3>
+                    <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
+                </div>
+                <div class="features__item">
+                    <img src="img/features/2.png" alt="" class="features__icon">
+                    <h3 class="features__title">Responsive Ready</h3>
+                    <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
+                </div>
+                <div class="features__item">
+                    <img src="img/features/3.png" alt="" class="features__icon">
+                    <h3 class="features__title">Modern Design</h3>
+                    <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
+                </div>
+                <div class="features__item">
+                    <img src="img/features/4.png" alt="" class="features__icon">
+                    <h3 class="features__title">Clean Code</h3>
+                    <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
+                </div>
+                <div class="features__item">
+                    <img src="img/features/5.png" alt="" class="features__icon">
+                    <h3 class="features__title">Ready to Ship</h3>
+                    <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
+                </div>
+                <div class="features__item">
+                    <img src="img/features/6.png" alt="" class="features__icon">
+                    <h3 class="features__title">Download for Free</h3>
+                    <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
+                </div>                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
