--- a/index.html
+++ b/index.html
@@ -25,11 +25,37 @@
                 <h1 class="header__title">Your Favorite One Page Multi Purpose Template</h1>
                 <h2 class="header__slogan">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna
                     vel scelerisque nisl consectetur et.</h2>
-                <button class="btn  btn--red">Find Out More</button>                
+                <button class="btn  btn--red">Find Out More</button>             
             </section>
         </div>
     </header>
-    <section class="features">
+    <!-- SVG Icons -->
+    <svg style="display: none;">
+        <symbol id="facebook" viewBox="0 0 24 24"> 
+            <g>
+                <path d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z"/>
+            </g>
+        </symbol>
+        <symbol id="twitter" viewBox="0 0 512 512"> 
+            <g>
+                <path d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016
+                c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992
+                c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056
+                c0,36.352,18.72,68.576,46.624,87.232c-16.864-0.32-33.408-5.216-47.424-12.928c0,0.32,0,0.736,0,1.152
+                c0,51.008,36.384,93.376,84.096,103.136c-8.544,2.336-17.856,3.456-27.52,3.456c-6.72,0-13.504-0.384-19.872-1.792
+                c13.6,41.568,52.192,72.128,98.08,73.12c-35.712,27.936-81.056,44.768-130.144,44.768c-8.608,0-16.864-0.384-25.12-1.44
+                C46.496,446.88,101.6,464,161.024,464c193.152,0,298.752-160,298.752-298.688c0-4.64-0.16-9.12-0.384-13.568
+                C480.224,136.96,497.728,118.496,512,97.248z"/>
+            </g>
+        </symbol>
+        <symbol id="linkedin" viewBox="0 0 512 512"> 
+            <g>
+                <path d="m475.074219 0h-438.148438c-20.394531 0-36.925781 16.53125-36.925781 36.925781v438.148438c0 20.394531 16.53125 36.925781 36.925781 36.925781h438.148438c20.394531 0 36.925781-16.53125 36.925781-36.925781v-438.148438c0-20.394531-16.53125-36.925781-36.925781-36.925781zm-293.464844 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0"/>
+            </g>
+        </symbol>                
+    </svg>
+    <!-- features -->
+    <section class="features"> 
         <div class="container">
             <div class="features__inner">
                 <div class="features__item">
@@ -62,8 +88,222 @@
                     <h3 class="features__title">Download for Free</h3>
                     <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
                 </div>                
+            </div>   <!-- /.features__inner -->
+        </div>  <!-- /.container -->
+    </section>
+    <!-- Works -->
+    <section class="works"> 
+        <div class="works__item">
+            <img src="img/works/1.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
             </div>
         </div>
+        <div class="works__item">
+            <img src="img/works/2.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img src="img/works/3.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img src="img/works/4.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
+            </div>
+        </div> 
+        <div class="works__item">
+            <img src="img/works/5.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img src="img/works/6.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img src="img/works/7.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img src="img/works/8.jpg" alt="" class="works__image">
+            <div class="works__content">
+                <h3 class="works__title">Project Name</h3>
+                <div class="works__subtitle">User Interface Design</div>
+            </div>
+        </div>                                 
     </section>
+    <!-- Our team -->
+    <section class="team">
+        <div class="container">
+            <div class="team__inner">
+                <div class="team__item">
+                    <img src="img/team/1.jpg" alt="" class="teammate__photo">
+                    <h3 class="teammate__name">Ruth Woods</h3>
+                    <h4 class="teammate__function">Founder, CEO</h4>
+                    <p class="teammate__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                    <div class="social">
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#facebook"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#twitter"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#linkedin"></use>
+                            </svg>
+                        </a>                                                
+                    </div>
+                </div>
+                <div class="team__item">
+                    <img src="img/team/2.jpg" alt="" class="teammate__photo">
+                    <h3 class="teammate__name">Timothy Reed</h3>
+                    <h4 class="teammate__function">Co-Founder, Developer</h4>
+                    <p class="teammate__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                    <div class="social">
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#facebook"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#twitter"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#linkedin"></use>
+                            </svg>
+                        </a>                                                
+                    </div>
+                </div>
+                <div class="team__item">
+                    <img src="img/team/3.jpg" alt="" class="teammate__photo">
+                    <h3 class="teammate__name">Victoria Valdez</h3>
+                    <h4 class="teammate__function">UI Designer</h4>
+                    <p class="teammate__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                    <div class="social">
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#facebook"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#twitter"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#linkedin"></use>
+                            </svg>
+                        </a>                                                
+                    </div>
+                </div>
+                <div class="team__item">
+                    <img src="img/team/4.jpg" alt="" class="teammate__photo">
+                    <h3 class="teammate__name">Beverly Little</h3>
+                    <h4 class="teammate__function">Data Scientist</h4>
+                    <p class="teammate__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                    <div class="social">
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#facebook"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#twitter"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#linkedin"></use>
+                            </svg>
+                        </a>                                                
+                    </div>
+                </div>                                      
+            </div><!-- /.team__inner -->
+        </div><!-- /.container -->
+    </section><!-- /.team -->
+   <!-- Clients -->
+    <section class="clients">
+        <img src="img/clients/1.jpg" alt="" class="clients__photo">
+        <div class="clients__content">
+            <p class="clients__review">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+            <div class="clients__data">Susan Sims, Interaction Designer at XYZ</div>
+        </div>
+    </section>
+    <!-- downloads -->
+    <section class="downloads">
+        <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
+        <div class="download__slogan">Fusce dapibus, tellus ac cursus commodo</div>
+        <button class="btn btn--red btn--download">Download Here</button>
+    </section>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__data">
+                <div class="footer__con">
+                    <h3 class="footer__data__title">Location</h3>
+                    <address class="address">
+                        <p>3481 Melrose Place</p>
+                        <p>Beverly Hills, CA 90210</p>
+                    </address>
+                </div>
+                <div class="footer__con">
+                    <h3 class="footer__data__title">Share with Love</h3>
+                    <div class="social">
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#facebook"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#twitter"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="social__link">
+                            <svg class="social__icon">
+                                <use xlink:href="#linkedin"></use>
+                            </svg>
+                        </a>                                                
+                    </div>
+                </div>
+                <div class="footer__con">
+                    <h3 class="footer__data__title">About ActiveBox</h3>
+                    <p class="footer__data_about">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </div><!-- /.footer__data -->
+        </div><!-- /.container -->
+        <div class="footer__copyright">
+            <p class="footer__copyright__text">Copyright © 2015 ActiveBox. All Rights Reserved
+                Made with Y by Kamal Chaneman</p>
+        </div>
+    </footer>
 </body>
 </html>
