Закончил верстку футера

--- a/index.html
+++ b/index.html
@@ -265,44 +265,45 @@
     </section>
     <!-- footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer__data">
-                <div class="footer__con">
-                    <h3 class="footer__data__title">Location</h3>
-                    <address class="address">
-                        <p>3481 Melrose Place</p>
-                        <p>Beverly Hills, CA 90210</p>
-                    </address>
+        <div class="footer__data">
+            <div class="footer__con">
+                <h3 class="footer__data__title">Location</h3>
+                <address class="address">
+                    <p>3481 Melrose Place</p>
+                    <p>Beverly Hills, CA 90210</p>
+                </address>
+            </div>
+            <div class="footer__con">
+                <h3 class="footer__data__title">Share with Love</h3>
+                <div class="social footer__social">
+                    <a href="#" class="social__link">
+                        <svg class="social__icon">
+                            <use xlink:href="#facebook"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="social__link">
+                        <svg class="social__icon">
+                            <use xlink:href="#twitter"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="social__link">
+                        <svg class="social__icon">
+                            <use xlink:href="#linkedin"></use>
+                        </svg>
+                    </a>                                                
                 </div>
-                <div class="footer__con">
-                    <h3 class="footer__data__title">Share with Love</h3>
-                    <div class="social">
-                        <a href="#" class="social__link">
-                            <svg class="social__icon">
-                                <use xlink:href="#facebook"></use>
-                            </svg>
-                        </a>
-                        <a href="#" class="social__link">
-                            <svg class="social__icon">
-                                <use xlink:href="#twitter"></use>
-                            </svg>
-                        </a>
-                        <a href="#" class="social__link">
-                            <svg class="social__icon">
-                                <use xlink:href="#linkedin"></use>
-                            </svg>
-                        </a>                                                
-                    </div>
-                </div>
-                <div class="footer__con">
-                    <h3 class="footer__data__title">About ActiveBox</h3>
-                    <p class="footer__data_about">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
-                </div>
-            </div><!-- /.footer__data -->
-        </div><!-- /.container -->
+            </div>
+            <div class="footer__con">
+                <h3 class="footer__data__title">About ActiveBox</h3>
+                <p class="footer__data_about">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+            </div>
+        </div><!-- /.footer__data -->
         <div class="footer__copyright">
-            <p class="footer__copyright__text">Copyright © 2015 ActiveBox. All Rights Reserved
-                Made with Y by Kamal Chaneman</p>
+            <p class="footer__copyright__text">
+                Copyright © 2015 ActiveBox. All Rights Reserved Made with 
+                <span style="color: #e84545;">♥</span> 
+                <span>by Kamal Chaneman</span>
+            </p>
         </div>
     </footer>
 </body>
