Фикс отображения лого

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <section class="header__menu-con" id="header__menu-con">
                 <div class="fixed__menu" id="fixed__menu">
                     <div class="header__menu-inner">
-                        <a href="#" class="header__logo"><img src="/img/logo.png" data-scroll="#header" alt=""></a>
+                        <a href="#" class="header__logo"><img src="./img/logo.png" data-scroll="#header" alt=""></a>
                         <nav class="header__menu" id="header__menu">
                             <a href="#" class="header__menu__link" data-scroll="#features">Features</a>
                             <a href="#" class="header__menu__link" data-scroll="#works">Works</a>
